- add support for Python 3.13 PR #852
- drop support for Python 3.8 and 3.9 PR #852
- add a -v option to pyvisa-shell to increase log verbosity and set default to WARN PR #816
- added support for an optional monitoring interface object to the read_binary_values() and
  query_binary_values() methods of message-based resources.
- added the message_size() helper function to calculate the estimated size of a data
  transfer, including the header.
- prevent adding duplicate paths to the DLL search path during ResourceManager
  instantiation #811
- set 4.0.0 as the lower bound for `typing_extensions` PR #866

1.14.1 (22-11-2023)
-------------------
- fix handling of missing board number for VICP resources PR #787

1.14.0 (13-11-2023)
-------------------
- fix ctypes truncated pointers on 64-bit for ViBusAddress, ViBusSize, ViAttrState PR #725
- fix read_termination_context does not allow None PR #727
- replace `bitness` for library and python runtime information with instruction set
  and bitness #733
  Resulting API changes:
  - `pyvisa.util.LibraryPath.arch` now returns a list of `pyvisa.util.ArchitectureType`
    enum values representing architectures the binary was compiled for
  - `p.u.LibraryPath.is_32bit`, `p.u.LibraryPath.is_64bit`, and `p.u.LibraryPath.bitness`
    have been removed
  - `p.u.get_shared_library_arch` now returns `p.u.PEMachineType` instead of a string
  - `p.u.get_arch` now returns a list of `p.u.ArchitectureType`
- update `Resource` context manager type annotation to preserve derived type PR #740
- added support for using custom simulation files when using the `sim` backend
  with `pyvisa-shell`. PR #774

1.13.0 (22-12-2022)
-------------------

- add official support for Python 3.11 and drop support for Python 3.7
- add support for VICP resource names PR #699
  NOTE: the interface type enum value for VICP is unknown. No documentation was
  found and tests using the VICP passport were not conclusive. If somebody figures